<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Networkscanner</string>

    <string name="title_activity_list_ips">ListIPs</string>

    <!--menu -->
    <string name="mnAbout">About</string>
    <string name="action_settings">Settings</string>

    <!--about -->


    <!-- MainActivity -->
    <string name="lbIPInsert">Please insert the IP Range you want to scan</string>
    <string name="lbIPFrom">From</string>
    <string name="lbIPTo">To</string>
    <string name="btScan">Scan</string>
    <string name="btClear">Clear</string>
</resources>
