<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.majuwa.androidnetworkscan.app.view.MainScreen"
    android:gravity="top">
    <TextView
        android:text="@string/lbIPInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp" />
    <TextView
        android:text="@string/lbIPFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtFrom" />

    <TextView
        android:text="@string/lbIPTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTo"
        android:layout_gravity="center_horizontal" />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btClear"
        android:id="@+id/btClear"
            android:onClick="clear" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btScan"
            android:id="@+id/btScan"
            android:layout_gravity="center_horizontal"
            android:onClick="scanIPs" />
    </LinearLayout>


</LinearLayout>
